Adding Mapper and Update Tests